@@ -39,6 +39,10 @@ Release 2.5.0 - UNRELEASED
     MAPREDUCE-5638. Port Hadoop Archives document to trunk (Akira AJISAKA via
     jeagles)
 
+    MAPREDUCE-5402. In DynamicInputFormat, change MAX_CHUNKS_TOLERABLE,
+    MAX_CHUNKS_IDEAL, MIN_RECORDS_PER_CHUNK and SPLIT_RATIO to be configurable.
+    (Tsuyoshi OZAWA via szetszwo)
+
   OPTIMIZATIONS
 
   BUG FIXES 
